--- a/flask_app/static/register.css
+++ b/flask_app/static/register.css
@@ -253,14 +253,15 @@ form .btn input[type="submit"] {
 
 .footerContainer {
     width: 100%;
-    height: 60px;
+    height: 90px;
     position: fixed;
     left: 50%;
-    bottom: -20px;
+    bottom: -45px;
     transform: translate(-50%, -50%);
     margin: 0 auto;
-    /* background-color: #d5000046; */
+    /* background-color: rgba(225, 225, 225, 0.328); */
     text-align: center;
+    padding: 20px;
 }
 
 #footContentContainer {
