--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -14,13 +14,12 @@
             background-image: url('static/assets/dashboard-background.png');
             background-size: 200px;
             background-repeat: repeat;
-            /* background-size: cover; */
         }
     </style>
 </head>
 
 <body>
-    <div>
+    <div id="page-container">
         <div id="header">
             <h1 class="abereto-font">The Car Collective</h1>
             <a id="logout-button" href="/logout" class="btn btn-primary">Logout</a>
