--- a/flask_app/templates/edit-car.html
+++ b/flask_app/templates/edit-car.html
@@ -11,7 +11,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
         body {
-            background-image: url('static/assets/dashboard-background.png');
+            background-image: url('/static/assets/dashboard-background.png');
             background-size: 200px;
             background-repeat: repeat;
         }
@@ -32,7 +32,7 @@
             <div class="box">
                 <div class="boxContent">
                     <form id="label-form" action="/editcar" , method="POST">
-                        <h3>Edit {{user_car.model}}</h3>
+                        <h3>Edit {{user_car.make}}</h3>
                         {% with messages = get_flashed_messages() %}
                         {% if messages %}
                         {% for message in messages %}
