--- a/flask_app/templates/add-car.html
+++ b/flask_app/templates/add-car.html
@@ -30,7 +30,7 @@
             <div class="box">
                 <div class="boxContent">
                     <form id="label-form" action="/insertcar" , method="POST">
-                        <h3>Add New Car</h3>
+                        <h3><b>Add New Car</b></h3>
                         {% with messages = get_flashed_messages() %}
                         {% if messages %}
                         {% for message in messages %}
